Login UI Created. Third Party OAuth Configured.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     {% include 'navbar/navbar.html' %}
+    {% include 'base/messages.html' with messages=messages %}
     <h1>{{ page_title }}</h1>
     {% block content %}
     {% endblock content %}
